# gremlin

./: Cargo.toml  Makefile
cli/: Cargo.toml
cli/src/: benchmark.rs  generator.rs  main.rs  scan.rs  worker.rs
cli/tests/: graceful_shutdown.rs  http_mock.rs  scan.rs
cli/tests/common/: assertions.rs  fixtures.rs  mock.rs  mod.rs  process.rs
cli/tests/data/: wordlist.txt
docs/adr/: 0001-workspace-architecture.md  0002-tokio-runtime.md  0003-tracing-logging.md  0004-streaming-processing-model.md  0005-bounded-queues.md  0006-http-client-selection.md  0007-pipeline-abstraction.md  0008-metrics-implementation.md  README.md
docs/architecture/: mpv1-core-architecture.md  observability.md  pipeline-processing.md
docs/performance/: memory-profile.md  performance-findings.md
engine/: Cargo.toml
engine/src/: engine.rs
gremlin-core/: Cargo.toml
gremlin-core/src/: config.rs  error.rs  generator.rs  lib.rs  logging.rs  metrics.rs  pipeline.rs  queue.rs  rate_limiter.rs  request.rs  response.rs  result.rs  test_helpers.rs  tests.rs  types.rs  wordlist.rs
gremlin-core/src/filters/: size.rs
gremlin-core/src/matchers/: mod.rs  regex.rs  status.rs
gremlin-core/src/pipeline/: executor.rs  mod.rs
gremlin-core/tests/: config_validation.rs  error_context.rs  metrics_progress.rs  pipeline_integration.rs  rate_limiter.rs
