[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
gremlin-core = { path = "../gremlin-core" }
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
engine = { path = "../engine" }
indicatif = "0.17"

[dev-dependencies]
nix = { version = "0.27", features = ["signal"] }
